# fastapi-azure-container-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_ANALYSIS.md  DIAGNOSTIC_REPORT.md  Dockerfile  INVESTIGATION_RESOLUTION_REPORT.md  LICENSE  Makefile  QUICK_START_NEW_PARSER.md  README.md  analyze_warrant_structure.py  debug_cells.py  examine_table_structure.py  extract_preferred_notations.py  find_onclick.py  historic_data-link-format.txt  investigate_siemens.py  main.py  make.ps1  pyproject.toml  requirements.txt  test_csv_metadata.py  test_liquidity_extraction.py  warrant_page.html
.github/: copilot-instructions.md
.github/workflows/: ca-fastapi-AutoDeployTrigger-7c145cd8-6028-451c-809b-885241841b05.yml  ca-fastapi-autoDeploy.yml  cd-deploy.yml  ci-quality.yml  devops.yml  publish.yml
app/: Makefile  applogger.py  logging_config.py  main.py  middleware.py
app/clients/: openfigi.py
app/core/: constants.py  database.py  logging.py  security.py  settings.py
app/crud/: instruments.py
app/models/: basedata.py  depots.py  history.py  indices.py  instrument_details.py  instruments.py  pricedata.py  quotes.py  types.py  users.py  warrants.py
app/parsers/: base_parser.py  basedata.py  helpers.py  history.py  indexes.py  indices.py  instruments.py  pricedata.py  quotes.py  special_asset_parser.py  standard_asset_parser.py  utils.py  warrant_detail.py  warrants.py
app/repositories/: __init__.py  depots.py  indices.py  instruments.py  users.py
app/routers/: admin.py  basedata.py  depots.py  health.py  history.py  indexes.py  (+8 more)
docs/: BUSINESS_REQUIREMENTS.md  DEPLOYMENT.md  DEPLOYMENT_REBUILD_SUMMARY.md  DEVELOPMENT_ROADMAP.md  DIAGNOSTIC_REPORT.md  PLUGIN_SYSTEM_DOCUMENTATION.md  PREFERRED_ID_NOTATION_GUIDE.md  QUICK_START_NEW_PARSER.md  SESSION_2026-02-08.md  SESSION_2026-02-16.md  TECHNICAL_REQUIREMENTS.md  prompt_to_fix_mapping_error.md
scripts/: analyse_warrant_html.py  analyse_warrant_rows.py  backfill_mapping_overrides.py  check_headers.py  check_leverage_values.py  check_warrant_deltas.py  clear_instrument_cache.py  compare_action_sets.py  compare_nvidia_notation_urls.py  debug_warrant_pages.py  deploy-to-azure.ps1  examine_liquidity_columns.py  examine_refetched_siemens.py  fetch_warrant_html.py  generate_warrant_urls.py  test_basedata_notations.py  test_comdirect_endpoints.py  test_correct_id_notations.py  test_eq_comparator.py  test_greek_range_filters.py  test_html_structure.py  test_plugin_system.py  test_preferred_notations.py  test_siemens_id_notation.py  test_url_patterns.py  test_warrant_MJ85T6.py  test_warrant_access.py  warrant_finder_response.html
tests/: conftest.py  test_main  test_main.py  test_root.py  test_users  test_users.py  test_welcome.py
(+65 files in other folders)
