[project]
name = "fastapi-azure-container-app"
version = "0.1.0"
description = "FastAPI application for financial data parsing and depot management, deployed on Azure Container Apps"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.1.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "pandas>=3.0.0",
    "pycountry>=24.6.1",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.0",
    "pylint>=4.0.4",
    "pymongo>=4.16.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "uvicorn>=0.40.0",
]
